<resources>
    <string name="app_name">함무보까</string>

    <string name="invalid_void_prompt">입력칸이 비어있습니다.</string>
    <string name="invalid_email">이메일 양식에 맞지 않습니다.</string>
    <string name="invalid_password_length">패스워드는 최소 8자리 이상 입력해주세요.</string>
    <string name="invalid_not_equal_password">패스워드 입력칸과 재입력칸이 서로 다릅니다.</string>
    <string name="invalid_special_character">특수문자가 포함되어있습니다.</string>
    <string name="invalid_blank_character">특수문자가 포함되어있습니다.</string>

    <string name="prompt_email">이메일</string>
    <string name="prompt_name">이름</string>
    <string name="prompt_new_password">새 패스워드</string>
    <string name="prompt_password">패스워드</string>
    <string name="prompt_password_verify">패스워드를 한 번 더 입력하세요.</string>
    <string name="prompt_nickname">닉네임</string>
    <string name="prompt_title">제목</string>
    <string name="prompt_content">내용</string>
    <string name="prompt_price">가격</string>
    <string name="prompt_category">카테고리</string>

    <string name="action_confirm">확인</string>
    <string name="action_cancel">취소</string>
    <string name="action_yes">네</string>
    <string name="action_no">아니오</string>
    <string name="action_use">사용하기</string>
    <string name="action_not_use">사용하지 않기</string>
    <string name="action_register">가입하기</string>
    <string name="action_not_register">가입하지 않기</string>
    <string name="action_log_in">로그인</string>
    <string name="action_log_out">로그아웃 하기</string>
    <string name="action_register_check_email">이메일 중복 확인</string>
    <string name="action_find_account">로그인 과정에 문제가 있으신가요?</string>
    <string name="action_first_sign_up">로그인이 처음이신가요?</string>
    <string name="action_auto_login">자동 로그인</string>
    <string name="action_selling">판매하기</string>
    <string name="action_negotiation">흥정가능</string>
    <string name="action_modify">수정하기</string>
    <string name="action_exit">나가기</string>
    <string name="action_not_exit">나가지 않기</string>
    <string name="action_select_market_spinner">카테고리를 선택해주세요.</string>

    <string name="title_register">회원가입</string>
    <string name="title_register_check_email">회원가입\n(이메일 중복 검사)</string>
    <string name="title_register_form">회원가입\n(회원 정보 작성)</string>
    <string name="title_account_find_email">아이디 찾기</string>
    <string name="title_account_find_password">패스워드 찾기</string>
    <string name="title_account_find_account">회원정보 찾기</string>
    <string name="title_waiting_server_response">서버의 응답을 기다리는 중..</string>
    <string name="title_menu_home">홈</string>
    <string name="title_menu_community">커뮤니티</string>
    <string name="title_menu_market">중고마켓</string>
    <string name="title_menu_meeting">모임</string>
    <string name="title_menu_preferences">환경설정</string>
    <string name="title_menu_chat">채팅</string>

    <string name="title_menu_market_list">판매글 보기</string>
    <string name="title_menu_market_my_sale">내가 쓴 글 보기</string>
    <string name="title_menu_market_chat">거래중인 글 보기</string>
    <string name="title_market_sold">판매완료</string>
    <string name="title_market_reservation">예약중</string>
    <string name="title_empty_data">자료를 불러오지 못했어요.</string>

    <string name="dialog_title_fail">실패</string>
    <string name="dialog_title_success">성공</string>
    <string name="dialog_title_login_fail">로그인에 실패했습니다.</string>
    <string name="dialog_title_register_fail">회원가입에 실패했습니다.</string>
    <string name="dialog_title_logout">정말 로그아웃 하시겠어요?</string>
    <string name="dialog_title_exit">정말 나가시겠어요?</string>
    <string name="dialog_message_error_login_fail">아이디와 패스워드를 다시 확인하고 시도해주세요.</string>
    <string name="dialog_message_need_email_verify">이메일 인증이 필요합니다.\n가입한 이메일로 발송된 인증 메일을 확인 후 다시 시도해주세요.</string>
    <string name="dialog_message_cant_nickname">누군가 사용중이거나 사용할 수 없는 닉네임입니다.</string>
    <string name="dialog_message_can_email">사용 가능한 이메일 주소입니다.</string>
    <string name="dialog_message_cant_email">사용할 수 없는 이메일 주소입니다.</string>
    <string name="dialog_message_unknown_error">알 수 없는 오류가 발생했습니다.</string>
    <string name="dialog_message_submit_register_form">이대로 가입을 요청할까요?</string>
    <string name="dialog_message_register_email_verify">회원가입에 성공했습니다!\n가입한 이메일로 인증 링크가 발송되었습니다.\n이메일 인증을 마친 후 로그인 해주세요.</string>
    <string name="dialog_message_success_request">요청에 성공했습니다.</string>
    <string name="dialog_message_fail_request">요청에 실패했습니다.</string>
    <string name="dialog_message_logout">자동 로그인이 설정되어있는 경우 자동로그인이 해제됩니다.</string>
    <string name="dialog_message_market_exit">글을 작성중입니다.\n지금까지 쓴 내용이 지워지게 됩니다.</string>
    <string name="dialog_message_writing_success">글을 작성하는데 성공했습니다.</string>
    <string name="dialog_message_writing_fail">글을 작성하는데 실패했습니다.</string>

    <string name="action_app_exit">\'뒤로\'버튼을 한 번 더 누르면 앱이 종료됩니다.</string>
    <string name="char_divider">•</string>
    
    <string name="alert_not_implement_function">미구현된 기능입니다.</string>
    <!--
    <string name="invalid_void_email">이메일 입력칸이 비어있습니다.</string>
    <string name="invalid_void_name">이름 입력칸이 비어있습니다.</string>
    <string name="invalid_void_password">패스워드 입력칸이 비어있습니다.</string>
    <string name="invalid_void_password_verify">패스워드 재입력칸이 비어있습니다.</string>
    <string name="invalid_void_nickname">닉네임 입력칸이 비어있습니다.</string>
    <string name="invalid_void_auth_code">인증코드 입력칸이 비어있습니다.</string>

    <string name="error_invalid_empty">입력칸이 비어있습니다.</string>
    <string name="error_invalid_email">이메일 양식에 맞지 않습니다.</string>
    <string name="error_invalid_password_length">패스워드는 최소 8자리 이상 입력해주세요.</string>
    <string name="error_invalid_password_not_equal">패스워드와 패스워드 확인칸이 일치하지 않습니다.</string>

    <string name="action_confirm">확인</string>
    <string name="action_cancel">취소</string>

    <string name="action_find">찾기</string>
    <string name="action_no_find">찾지 않기</string>
    <string name="action_find_email">아이디 찾기</string>
    <string name="action_find_password">패스워드 변경하기</string>
    <string name="action_change_password">패스워드 변경하기</string>
    <string name="action_double_check_email">이메일 중복확인</string>
    <string name="action_go_to_first">처음으로</string>
    <string name="action_go_to_sign_in">로그인 하러가기</string>
    <string name="action_go_to_auth">인증하기</string>
    <string name="action_found">찾았습니다!</string>
    <string name="action_not_found">찾지 못했습니다..</string>
    <string name="action_finding">찾는 중..</string>
    <string name="action_submit_form">회원가입하기</string>
    <string name="action_submit_auth_code">인증코드 전송</string>
    <string name="action_submit_password">패스워드 전송</string>

    <string name="title_sign_up_check_email">회원가입\n(이메일 중복 검사)</string>
    <string name="title_sign_up_form">회원가입\n(회원 정보 작성)</string>
    <string name="title_sign_up_auth_code">회원가입\n(인증코드 입력)</string>

    <string name="action_find_email">아이디 찾기</string>
    <string name="action_find_password">패스워드 찾기</string>

    <string name="server_connection_failed_title_msg">서버에 연결하지 못했습니다.</string>
    <string name="server_connection_failed_do_msg">오류로 인해 서버에 연결하지 못했습니다.\n나중에 다시 시도해주세요.</string>

    <string name="msg_token_fmt">asd</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    -->
</resources>