<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="fragment"
            type="com.example.afop.ui.auth.login.LoginFragment" />

        <variable
            name="textWatcher"
            type="android.text.TextWatcher" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical"
            android:rotationX="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/loginTitleImageView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginEmailTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginEmailTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:addTextChangedListener="@{textWatcher}"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginPasswordTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginPasswordTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:addTextChangedListener="@{textWatcher}"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:onClick="@{fragment::login}"
                android:text="@string/action_log_in"
                android:textAlignment="center"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/loginAutoLoginCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{fragment::autoLogin}"
                android:text="@string/action_auto_login" />

            <Button
                android:id="@+id/resetPasswordButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="#00FFFFFF"
                android:onClick="@{fragment::resetPassword}"
                android:text="@string/action_find_account"
                android:textSize="14sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/registerButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="#00FFFFFF"
                android:onClick="@{fragment::register}"
                android:text="@string/action_first_sign_up"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>