<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/marketSaleTitleEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/prompt_title"
                android:singleLine="true"
                android:textSize="20dp"
                android:background="#ffffff"
                />

            <!-- 구분선 -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <Spinner
                android:id="@+id/marketSaleKategorieSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/카테고리"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/marketSaleKategorieTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_kategorie"
                android:textSize="20dp" />

            <!-- 구분선 -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/marketSalePriceEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:ems="7"
                    android:hint="@string/prompt_price"
                    android:inputType="numberDecimal"
                    android:background="#ffffff"/>

            </LinearLayout>

            <!-- 구분선 -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="이미지 추가하기" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            app:srcCompat="@drawable/ic_baseline_add"
                            />

                       <!-- <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/marketSaleImageRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scrollbars="horizontal"
                            tools:listitem="@layout/item_image_upload" /> -->
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>

            <TextView
                android:id="@+id/marketSaleContentTextView"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:padding="10dp"
                android:hint="@string/prompt_content"
                android:background="@drawable/textview_border"
                android:textSize="20dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >

                <Button
                    android:id="@+id/marketSaleCancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".45"
                    android:text="@string/action_cancel" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight=".1" />

                <Button
                    android:id="@+id/marketSaleSellButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".45"
                    android:text="@string/action_selling" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>